tests/reference/asr_preprocess-cpp4-0611905.stderr
input:11:13 semantic error: Variable 'z12345678' not declared
print *, x, C123
            ^~~~
